# RyntraProject

./: .clang-format  CMakeLists.txt  README BEFORE PACKING AND DIST  README.md  ROADMAP.md  main.cpp  main.md  pom.xml
compiler/: CMakeLists.txt  compiler.cpp  compiler.h  main_cli.cpp
compiler/codegen/: integrated_linker.cpp  integrated_linker.h  llvm_codegen.cpp  llvm_codegen.h
compiler/lexer/: lexer.cpp  lexer.h  token.cpp  token.h
compiler/parser/: ast.cpp  ast.h  parser.cpp  parser.h
compiler/test/: HelloWorld.rynt  test_compiler.cpp  test_full_compilation.cpp
rplink/: README.md
src/main/antlr4/: Ryntra.g4
src/main/java/org/remimwen/Ryntra/: main.java
src/main/java/org/remimwen/Ryntra/Interpreter/: BuiltinFunctions.java
src/main/java/org/remimwen/Ryntra/Interpreter/CodeGen/: CodeGen.java
src/main/java/org/remimwen/Ryntra/Interpreter/SemanticAnalyzer/: SemanticAnalyzer.java
src/main/java/org/remimwen/Ryntra/Interpreter/VM/: Command.java  OpCodes.java  VM.java
src/main/java/org/remimwen/Ryntra/Interpreter/VM/utils/: ConstantPool.java
utils/: CMakeLists.txt  ConsoleTextColorManager.h  ErrorHandler.cpp  ErrorHandler.h  arg_parser.cpp  arg_parser.h  compiler_utils.cpp  compiler_utils.h
